--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
-    "name": "CF Analytics",
-    "version": "3.0.0",
+    "name": "CF Analytics Ashray's Fork",
+    "version": "1.0.0",
     "description": "Analyse Codeforces profiles",
     "icons":{
         "128": "src/asset/icon128.png",
